--- a/server/compose.yml
+++ b/server/compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    image: makos/http-print-server
+    image: docker.io/makos/http-print-server
     environment:
       - PORT=8080
     ports:
